# lisette

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  PRIVACY.md  README.md  alembic.ini  db.sqlite  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/: 633a2e56faff_add_task_indents_col.py
lisette/: __init__.py  __main__.py  logging.py
lisette/cogs/: helpers.py  lists.py  tasks.py  util.py
lisette/core/: bot.py  collections.py  database.py  exceptions.py  modals.py  models.py  options.py  ui.py
lisette/lib/: classes.py  config.py  logging.py  util.py
scripts/: update.sh
tests/: fixtures.py  test_config.py  test_helpers.py  test_lists.py  test_logging.py  test_model.py  test_util.py
