[tool.poetry]
name = "lisette"
version = "0.1.0"
description = "A Discord bot for making lists together"
authors = ["Amelia Froemming <7919407+afroemming@users.noreply.github.com>"]
readme = "README.md"
license = 'MIT'
repository = 'https://github.com/afroemming/lisette'

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.15"
aiosqlite = "^0.19.0"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
