[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Lisette"
version = "0.1"
authors = [
  { name="Amelia Froemming"},
]
description = "A Discord bot for making lists together."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "hatch",
  "SQLAlchemy",
  "alembic",
  "py-cord",
  "aiosqlite",
  "python-dotenv"
]

[project.urls]
"Homepage" = "https://github.com/afroemming/lisette"
"Bug Tracker" = "https://github.com/afroemming/lisette/issues"

[project.optional-dependencies] # Optional
dev = ["mypy"]
test = ["pytest", "coverage", "pytest-asyncio"]

[tool.hatch.build.targets.wheel]
packages = ["lisette"]
